@@ -1,3 +1,5 @@
+from __future__ import division
+
 import numpy as np
 import pandas as pd
 from pandas_datareader import data as web
@@ -5,6 +7,10 @@ from pandas_datareader import data as web
 <<<<<<< HEAD
 import matplotlib.pyplot as plt
 
+import sys
+sys.path.insert(0, '../statistics/')
+
+import statisticaltest as stat # importing MDD, Hurst
 
 =======
 >>>>>>> Add logger. Change setting files. Init packages. Add __main__.
@@ -14,9 +20,11 @@ import matplotlib.pyplot as plt
 
 <<<<<<< HEAD
 #data = new_hist.export() # retrieve historical data
-lookback = [1, 2, 5]
+symbol = ['AAPL', 'EUR=X']
+forex = ['AUD=X', 'CAD=X', 'CHF=X', 'CNY=X', 'EUR=X', 'GBP=X', 'JPY=X', 'SGD=X','USD=X']
+lookback = [5, 10, 25, 50]
 holddays = [1, 5, 10, 25, 60, 120]
-tcost = [0, 0.001, 0.002] # transaction cost
+tcost = [0, 0.00005] # transaction cost
 
 # temporary obsolette
 
@@ -30,7 +38,7 @@ class MomVectBacktest(object):
 		self.results = None
 		self.get_data()
 
-	def get_data(self): #fetching data, this uses yahoo data, but we may use other
+	def get_data(self): #fetching data, this uses yahoo data, but we may use other		
 		raw = web.DataReader(self.symbol, data_source='yahoo',start=self.start, end=self.end)['Adj Close']
 		raw = pd.DataFrame(raw)
 		raw.rename(columns={'Adj Close': 'price'}, inplace=True)
@@ -41,7 +49,7 @@ class MomVectBacktest(object):
 	def run_strategy(self, momentum = 1):
 		self.momentum = momentum
 		data = self.data.copy()
-		data['position'] = np.sign(data['return'].rolling(momentum).mean()) # get momentum
+		data['position'] = np.sign(data['return'].rolling(momentum).mean()) # generate position dataframe by rolling data points
 		data['strategy'] = data['position'].shift(1)*data['return']
 		# determine when a trade takes place
 		trades = data['position'].diff().fillna(0) != 0
@@ -54,12 +62,33 @@ class MomVectBacktest(object):
 		aperf = self.results['cstrategy'].ix[-1]
 		# out-/underperformance of strategy
 		operf = aperf - self.results['creturns'].ix[-1]
-		return round(aperf, 2), round(operf, 2)
+		# MDD calculating: consider the minimum in the period
+		for i in range(len(data)):
+			peak = max(data)
+			trough = min(data)
+			pass
+		# MDD = float((trough - peak)/peak), until the next peak
+		return round(aperf, 2), round(operf, 2), round(stat.hurst(data['price']), 4), round(self.MDD(data['cstrategy']), 4)
+
+	def MDD(self, data): # calculating maximum drawdown
+		MDD = 0
+		peak = self.amount
+		trough = self.amount
+
+		for i in range(len(data)):
+			if (peak < data[i]):
+				peak = data[i]
+				trough = data[i]
+			elif (trough > data[i]):
+				trough = data[i]
+
+			MDD = min(MDD, (trough-peak)/peak)
+		return MDD
 
 	def plot_results(self):
 		if self.results is None:
 			print('No result to plot yet')
-		title = '%s | TC = %.4f' % (self.symbol, self.tc)
+		title = '%s | TC = %.5f' % (self.symbol, self.tc)
 		self.results[['creturns','cstrategy']].plot(title=title,figsize=(10,6))
 		plt.show()
 
@@ -68,6 +97,7 @@ if __name__ == '__main__':
 	for t in range(len(lookback)):
 		print('lookback period %d' %lookback[t])
 		for i in range(len(tcost)):
+<<<<<<< 6df8f2fde3f9f88d67b03c3e1964fef641ef8408
 			mombt = MomVectBacktest('AAPL','2010-1-1','2016-10-31',10000, tcost[i]) #object
 			print(mombt.run_strategy(momentum=2))
 			mombt.plot_results()
@@ -150,6 +180,10 @@ if __name__ == '__main__':
         for i in range(len(tcost)):
             mombt = MomVectBacktest('AAPL', '2010-1-1', '2016-10-31', 10000, tcost[i])
             print(mombt.run_strategy(momentum=2))
+=======
+			mombt = MomVectBacktest(forex[5],'2005-01-01','2011-01-01',10000, tcost[i]) #object
+			print(mombt.run_strategy(momentum=lookback[t]))
+>>>>>>> add MDD, Hurst and forex symbol list
 
 '''
 A few notes:
@@ -158,6 +192,7 @@ to get the sign of the return, but we can also get the sign of m latest return, 
 we use rolling(m)
 - m here can be understood as lookback period? Is there another way to model lookback period?
 
-Will need to learn how to plot stuff
+Will need to learn how to plot stuff (resolved)
 
+EURUSD symbol seems to be bugged (resolved)
 '''
